dnl RCS:         $Header: /afs/cs.cmu.edu/user/tmwong/Cvs/fscachesim/configure.in,v 1.5 2002/02/18 22:20:07 tmwong Exp $
dnl Description: fscachesim configure.in
dnl Created by:  T.M. Wong <tmwong+@cs.cmu.edu>

dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_TARGET

dnl
dnl Initializes automake
dnl

AM_INIT_AUTOMAKE(fscachesim,1.0)
AM_CONFIG_HEADER(config.h)

dnl
dnl Checks for programs.
dnl

AC_PROG_CC
AC_PROG_CXX

dnl
dnl Checks for libraries.
dnl

dnl
dnl Checks for header files.
dnl

m4_warn([obsolete],
[The preprocessor macro `STDC_HEADERS' is obsolete.
  Except in unusual embedded environments, you can safely include all
  ISO C90 headers unconditionally.])dnl
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_CHECK_HEADERS(stdint.h)
AC_CHECK_HEADERS(unistd.h)

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl

AC_C_CONST
AC_TYPE_SIZE_T

dnl AC_CHECK_TYPE(uint16_t, unsigned short int)
dnl AC_CHECK_TYPE(uint32_t, unsigned int)
dnl AC_CHECK_TYPE(uint64_t, unsigned long long)

dnl
dnl Checks for library functions.
dnl

AC_CHECK_FUNCS(strerror)

dnl
dnl Output Makefiles
dnl

AC_CONFIG_FILES([\
	Makefile	\
	doc/Makefile	\
	mambolib/Makefile \
	scripts/Makefile
	])
AC_OUTPUT
