# RCS:         $Header: /afs/cs.cmu.edu/user/tmwong/Cvs/fscachesim/Makefile.am,v 1.17 2002/02/13 20:21:08 tmwong Exp $
# Created by:  T.M. Wong <tmwong+@cs.cmu.edu>

bin_PROGRAMS = bin2asc asc2bin iotracelib

asc2bin_SOURCES = \
	asc2bin.c \
	iotrace.h

bin2asc_SOURCES = \
	bin2asc.c \
	iotrace.h

iotracelib_SOURCES = \
	iotrace.h \
	iotracelib.c \
	iotracelib.h
